--- a/Client/src/components/nav/NavBar.module.css
+++ b/Client/src/components/nav/NavBar.module.css
@@ -25,7 +25,6 @@
     display: flex;
     justify-content: space-between;
     gap: 0px 20px;
-    margin-top: 2px;
 }
 .logOut{
     height: 30px;
@@ -33,7 +32,9 @@
     border: none;
     border-radius: 5px;
     background-color: #fff;
-    background-size: cover;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: center;
     background-image: url(../../img/icons/logOut.png);
     transition: .2s;
     cursor: pointer;
@@ -42,6 +43,9 @@
     background-color: #EB4AA0;
     transform: translate(-3px, -3px);
     box-shadow: 3px 3px #FFF;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: center;
     background-image: url(../../img/icons/logOutWhite.png);
 }
 .Link{
